# esp32s3_HUB75

./: .gitignore  README.md  fall_animation.h  sdkconfig
.cache/clangd/index/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp.A4FED257D276CEFF.idx  ESP32-HUB75-MatrixPanel-I2S-DMA.h.B7E01FEF2E21A6AE.idx  ESP32-HUB75-MatrixPanel-leddrivers.cpp.6BCE3A2A2FDCCA48.idx  esp32_i2s_parallel_dma.cpp.24ADEE2BF308B743.idx  esp32s3-default-pins.hpp.F2944970A99E75C4.idx  gdma_lcd_parallel16.cpp.5A20F12A62F19D59.idx  gdma_lcd_parallel16.hpp.5E4D0D53556C7C7C.idx  main.cpp.14C73E526B875DA2.idx  platform_detect.hpp.C0D85A2C5564E62E.idx
main/: CMakeLists.txt  idf_component.yml  main.cpp
